# thalassa

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Dockerfile  LICENSE  README.md  batch_tol.py  cart_coe.f90  cthalassa  dependencies.sh  initialize.f90  io.f90  makefile  phys_const.f90  propagate.f90  settings.f90  thalassa_main.f90
app/: CMakeLists.txt  thalassa_main.f90
batch/: batch_tol.py  coegrid.py  griddef.json  griddef.txt  launchgrid.py
data/: kernels_to_load.furnsh  physical_constants.txt
data/kernels/: .gitignore  README.md  kernels.sh
doc/: README.md  batch.md  setup.md  setup_hdf5.md
dp/: auxiliaries.f90  batch_proc.py  batch_tol.py  batch_tol_par.py  cart_coe.f90  coord_syst.f90  debug_info.py  find_period.py  initialize.f90  input_list.txt  io.f90  kepler.f90  makefile  phys_const.f90  propagate.f90  propagate_old.f90  rframes.f90  settings.f90  thalassa_drv_tol.f90  thalassa_main.f90
dp/data/: physical_constants.txt
dp/data/earth_potential/: GRIM5-S1.txt
dp/in/: input.bak  input.txt  object.txt  oels_ic.txt  physical_constants.txt
dp/in/ETS-7/: oels_ic.txt
dp/in/GTO_example/: input.txt  oels_ic.txt
dp/in/GTO_short/: input.txt  oels_ic.txt
dp/in/Galileo/: input_dt10d.txt
dp/in/INTEGRAL/Camilla/: input.txt  oels_ic.txt
dp/in/INTEGRAL/TLE/: input.txt  oels_ic.txt
dp/in/LEO_example/: input.txt
dp/in/Molniya/: input_dt10d.txt
dp/integ/: integrate.f90
dp/model/: US76_PATRIUS.f90  atmos76.f90  atmos76_kinds.f90  drag_exponential.f90  nsgrav.f90  perturbations.f90  srp.f90  sun_moon.f90
dp/model/J77/: atsu.for  ja77.for  soflud.for
dp/phys/: STELA_physical_parameters.original  STELA_physical_parameters.txt
dp/phys/earth_potential/: EGM_GOC_2.txt
dp/regular/: StiSche.f90  cowell.f90  edromo.f90  ks.f90  regular_aux.f90  stische.f90
dp_bak/: initialize.f90  kinds.f90  makefile  thalassa_main.f90
dp_bak/in/: input.bak  input.txt  kernels_to_load.furnsh
dp_bak/in/Galileo/: input_dt10d.txt
dp_bak/in/IBEX/: oels_ic.txt
dp_bak/in/Molniya/: input_dt10sd.txt
dp_bak/in/Molniya/early_collision/: oels_ic.txt
dp_bak/in/Simbol-X/: input_dt10d.txt  input_dt10sd.txt  oels_ic.txt
dp_bak/integ/DOP853/: dr_dop853.f
dp_bak/model/: sun_moon.f90
dp_bak/phys/: SWIFT_physical_parameters.txt
dp_bak/regular/: cowell.f90
dp_fork_batch/: auxiliaries.f90  integrate.patch  io.f90  makefile  phys_const.f90  propagate.f90  propagate.patch  propagate_updated.f90  propagate_updated.f90.rej  settings.f90  thalassa_main.f90
dp_fork_batch/in/: input.txt  oels_ic.txt
dp_fork_batch/in/ETS-7/: input.txt
dp_fork_batch/in/GTO_example/: input.txt  oels_ic.txt
dp_fork_batch/in/IBEX/: input_dt10d.txt
dp_fork_batch/in/LEO_example/: input.txt  oels_ic.txt
dp_fork_batch/in/Molniya/: oels_ic.txt
dp_fork_batch/in/Simbol-X/: input_dt10d.txt
dp_fork_batch/integ/: integrate.f90
dp_fork_batch/model/: nsgrav.f90  perturbations.f90
dp_fork_batch/phys/: STELA_physical_parameters.txt  SWIFT_physical_parameters.txt
dp_fork_batch/regular/: cowell.f90  edromo.f90  regular_aux.f90
fork_qp/: kinds.f90  phys_const.f90  propagate.f90  settings.f90
fork_qp/in/: input.txt  oels_ic.txt
fork_qp/in/Galileo/: input_dt10sd.txt
fork_qp/in/IBEX/: input_dt10d.txt  input_dt10sd.txt
fork_qp/in/Molniya/early_collision/: input_dt10d.txt
fork_qp/in/Simbol-X/: input_dt10d.txt  input_dt10sd.txt
fork_qp/integ/DOPRI5/: dr_dopri5.f
fork_qp/model/: perturbations.f90
fork_qp/phys/: STELA_physical_parameters.dop_compatibility
fork_qp/regular/: edromo.f90
in/: input.txt  object.txt
integ/: integrate.f90
interface/: CMakeLists.txt  cthalassa.c  cthalassa.f90  cthalassa_types.f90  interface_example.cpp
interface/cpp/: CMakeLists.txt  thalassa_interface_example.cpp
interface/cpp/include/cthalassa/: cthalassa.h  cthalassa.hpp
interface/cpp/src/: cthalassa.cpp  cthalassa.f90
interface/cthalassa/: CMakeLists.txt  cthalassa_example.cpp
interface/cthalassa/include/cthalassa/: cthalassa.h  cthalassa.hpp
interface/cthalassa/src/: cthalassa.cpp  cthalassa.f90  cthalassa_types.f90
interface/include/: cthalassa.h
interface/include/cthalassa/: cthalassa.h  cthalassa.hpp
interface/matlab/: CMakeLists.txt  thalassa_interface_example.m
interface/matlab/src/: mthalassa.c  mthalassa.txt
interface/mthalassa/: CMakeLists.txt  mthalassa.txt  mthalassa_example.m
interface/mthalassa/include/mthalassa/: mthalassa.h  parsers.h
interface/mthalassa/src/: mthalassa.c  parsers.c
interface/pythalassa/: CMakeLists.txt  pythalassa_example.py
interface/pythalassa/include/pythalassa/: pythalassa.hpp
interface/pythalassa/src/: pythalassa.cpp
interface/src/: cthalassa.c  cthalassa.cpp
lib/: .gitignore  README.md  pythalassa.pyi
model/: US76_PATRIUS.f90  nrlmsise00_sub.for  nsgrav.f90  perturbations.f90  srp.f90  sun_moon.f90
regular/: cowell.f90  edromo.f90  ks.f90  regular_aux.f90  stische.f90
src/: CMakeLists.txt  auxiliaries.f90  io.f90  phys_const.f90  propagate.f90
src/model/: nsgrav.f90  sun_moon.f90
